Added colors and background samples

--- a/2-HTML/index.html
+++ b/2-HTML/index.html
@@ -114,6 +114,38 @@
         </form>
 
         <img src="https://lh3.googleusercontent.com/Ryg5ih-fOWbpEGDpbJYJz5RTq3_28Tvo2h3JQRCdiz16lw5ghitDMN6hcWA57g0d6_8VOqQYcCemRBOfZGQA64ZKkFOn71zuF1LDsXwCh4ywF-_z6VqxbBqmbQvK_-PWfZcztxDd1WDTEEUHX6GdP60" alt="monkey the luffy">
+        <br><br>
+
+
+    <table border="2">
+        <thead>
+            <tr>
+                <th>Supplier</th>
+                <th>Product</th>
+                <th>Location</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2">Nike</td>
+                <td rowspan="2">Shoes</td>
+                <td>New York</td>
+            </tr>
+            <tr>
+                <td>San Francisco</td>
+            </tr>
+            <tr>
+                <td>Supreme</td>
+                <td>Clothes</td>
+                <td>Los Angeles</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">Total: 2 suppliers</td>
+            </tr>
+        </tfoot>
+    </table>
 
     <br><br><br><br>
     </body>
