Added html changes

--- a/2-HTML/index.html
+++ b/2-HTML/index.html
@@ -120,29 +120,29 @@
     <table border="2">
         <thead>
             <tr>
-                <th>Supplier</th>
-                <th>Product</th>
-                <th>Location</th>
+                <th>Table head</th>
+                <th>Table head</th>
+                <th>Table head</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td rowspan="2">Nike</td>
-                <td rowspan="2">Shoes</td>
-                <td>New York</td>
+                <td rowspan="2">Table data</td>
+                <td rowspan="2">Table data</td>
+                <td>Table data</td>
             </tr>
             <tr>
-                <td>San Francisco</td>
+                <td>Table data</td>
             </tr>
             <tr>
-                <td>Supreme</td>
-                <td>Clothes</td>
-                <td>Los Angeles</td>
+                <td>Table data</td>
+                <td>Table data</td>
+                <td>Table data</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="3">Total: 2 suppliers</td>
+                <td colspan="3">Table data</td>
             </tr>
         </tfoot>
     </table>
